--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 authors = ["Tanvi Pooranmal Meena tanvipm19@gmail.com"]
 description = "Classifier to detect CI/CD config files based on file name and MIME label."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/kurajo/confignet"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -22,6 +24,10 @@ csv = "1.3"
 tempfile = "3.10"
 assert_cmd = "2.0"
 
+[lib]
+name = "confignet"
+path = "src/lib.rs"
+
 [[bin]]
-name = "cnet"
+name = "confignet"
 path = "src/main.rs"
